Added the assets of the project

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ encore_entry_link_tags('app') }}
+    <link rel="stylesheet" href="/build/app.css">
     <title>Symfony Test</title>
 </head>
 <body>
     
     <header>Bike Shop <br></header>
     <main>{% block content %}{% endblock %}</main>
-    <footer><br> Are Rights are reserved .</footer>   
+    <footer class="side"><br> Are Rights are reserved .</footer>   
 </body>
 </html>
